# universal_robot

./: README.md
ur5_e_moveit_config/: CMakeLists.txt
ur5_e_moveit_config/launch/: moveit.rviz  ur5_e_moveit_planning_execution.launch
ur5_e_moveit_config/scripts/: planning_scene.py  planning_scene_tutorial.py
ur5_e_moveit_config/src/: main.cpp  planning_scene_ros.cpp
ur_e_description/urdf/: ur5e.urdf.xacro
